Refactored event listener for the button click, Added calculator funcationality, Tweaked CSS for better layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="main-box">
     <div class="display">
-      <div id=result class="display-text">0</div>
+      <div id=result class="display-text"></div>
     </div>
     <span onclick="addToEquation"id="1">1</span>
     <span id="2">2</span>
@@ -18,7 +18,7 @@
     <span id="4">4</span>
     <span id="5">5</span>
     <span id="6">6</span>
-    <span id="*">*</span>
+    <span id="X">X</span>
     <span id="7">7</span>
     <span id="8">8</span>
     <span id="9">9</span>
