Fixed small typo in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="display">
       <div id=result class="display-text"></div>
     </div>
-    <span onclick="addToEquation"id="1">1</span>
+    <span id="1">1</span>
     <span id="2">2</span>
     <span id="3">3</span>
     <span id="/">/</span>
