Fixed CSS button centering issue w/ flexbox

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <div class="display">
       <div id=result class="display-text"></div>
     </div>
-    <span id="1">1</span>
-    <span id="2">2</span>
-    <span id="3">3</span>
-    <span id="/">/</span>
-    <span id="4">4</span>
-    <span id="5">5</span>
-    <span id="6">6</span>
-    <span id="X">X</span>
-    <span id="7">7</span>
-    <span id="8">8</span>
-    <span id="9">9</span>
-    <span id="-">-</span>
-    <span id="AC">AC</span>
-    <span id="0">0</span>
-    <span id="=">=</span>
-    <span id="+">+</span>
+    <div class="buttons">
+      <span id="1">1</span>
+      <span id="2">2</span>
+      <span id="3">3</span>
+      <span id="/">/</span>
+      <span id="4">4</span>
+      <span id="5">5</span>
+      <span id="6">6</span>
+      <span id="X">X</span>
+      <span id="7">7</span>
+      <span id="8">8</span>
+      <span id="9">9</span>
+      <span id="-">-</span>
+      <span id="AC">AC</span>
+      <span id="0">0</span>
+      <span id="=">=</span>
+      <span id="+">+</span>
+    </div>
   </div>
 
   <script src="index.js"></script>
