Added decimal button + functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="main-box">
     <div class="display">
+      <span id="AC">AC</span>
       <div id=result class="display-text"></div>
     </div>
     <div class="buttons">
@@ -24,7 +25,7 @@
       <span id="8">8</span>
       <span id="9">9</span>
       <span id="-">-</span>
-      <span id="AC">AC</span>
+      <span id=".">.</span>
       <span id="0">0</span>
       <span id="=">=</span>
       <span id="+">+</span>
