Fixed unsafe use of eval() - using Math.js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </div>
   </div>
 
+  <!-- Add Math.js library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
